# lemonshork

./: .env  .gitignore  Cargo.toml  README.md  config.json.example
src/: main.rs
src/events/: message.rs
src/events/message/: get_content.rs  get_ocr.rs  get_paste.rs  get_result.rs  mod.rs  parse_content.rs  send_response.rs
