[package]
name = "lemonshork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
serenity = { version = "0.12.0", features = ["cache", "framework", "standard_framework"] }
rusty-tesseract = "1.1.9"
image = "0.24.0"
reqwest = "0.11.22"
dotenv = "0.15.0"
regex = "1.10.2"