[package]
name = "lemonshork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
serenity = { version = "0.12.0", features = [
	"cache",
	"framework",
	"standard_framework",
] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
image = "0.24.0"
reqwest = "0.11.22"
regex = "1.10.2"
url = { version = "2.5.0", features = ["serde"] }
leptess = "0.14.0"
error-stack = "0.4.1"


[profile.release]
debug = false
opt-level = 3
codegen-units = 1
lto = true
strip = true
